--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block head_title %} Leaderboard{%
-endblock %} {% block head %}
+{% extends 'base.html' %} {% load static %} {% block head_title %} Leaderboard{% endblock %} {% block head %}
 <style>
   th {
     border-top: none;
@@ -14,29 +13,8 @@ endblock %} {% block head %}
   td {
     padding: 10px;
   }
-  body {
-    background-color: #0a0a0a;
-    /* ...same animation properties as homepage... */
-  }
-  .animated-bg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    z-index: -1;
-  }
-  @keyframes backgroundPan {
-    /* ...same keyframes as homepage... */
-  }
 </style>
 {% endblock %} {% block content %}
-<div class="animated-bg">
-  <svg width="100%" height="100%" viewBox="0 0 800 800">
-    <!-- ...same animated ellipses as homepage... -->
-  </svg>
-</div>
 <div class="justify-center">
   <div
     class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10"
@@ -59,9 +37,7 @@ endblock %} {% block head %}
       tabindex="0"
       class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6"
     >
-      {% if rank != 'unauthorised' %}<span class="text-2xl"
-        >Your Rank: {{rank}}</span
-      >{% endif %}
+      {% if rank != 'unauthorised' %}<span class="text-2xl">Your Rank: {{rank}}</span>{% endif %}
     </p>
 
     <table class="table-auto w-full border-separate border-spacing-y-5">
@@ -96,9 +72,7 @@ endblock %} {% block head %}
         >
           <td class="text-left text-xl leading-6 text-green-600">
             <span data-tooltip-target="tooltip" data-tooltip-placement="left"
-              ><img
-                src="{% static 'logo.svg' %}"
-                class="inline w-9 text-grenn-600"
+              ><img src="{% static 'logo.svg' %}" class="inline w-9 text-grenn-600"
             /></span>
           </td>
           <div
@@ -127,9 +101,7 @@ endblock %} {% block head %}
           id="row"
         >
           <td class="text-left text-xl leading-6 text-green-600">
-            {% if forloop.counter == 1 %}🥇{% elif forloop.counter == 2 %}🥈{%
-            elif forloop.counter == 3 %}🥉{% else %}{{ forloop.counter }}{%
-            endif %}
+            {% if forloop.counter == 1 %}🥇{% elif forloop.counter == 2 %}🥈{% elif forloop.counter == 3 %}🥉{% else %}{{ forloop.counter }}{% endif %}
           </td>
           <td class="text-left text-xl leading-6 text-green-600">
             <a href="{% url 'public-profile' username=user%}"
