--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
-{% block head_title %}Login{% endblock head_title %}
+{% block head_title %}
+  Login
+{% endblock head_title %}
 {% block head %}
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
-<style>
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+  <style>
 .errorlist {
   color: #ef4444;
   font-size: 0.875rem;
@@ -251,143 +254,164 @@
     cursor: pointer;
     user-select: none;
   }
-</style>
+  </style>
 {% endblock head %}
-
 {% block content %}
-<div class="justify-center px-4 py-8">
-  <div class="max-w-7xl mx-auto min-h-[calc(100vh-150px)] flex items-stretch">
-    <!-- Combined Card Container -->
-    <div class="bg-neutral-900/70 backdrop-blur-md shadow-inset-white rounded-2xl overflow-hidden flex-1 flex flex-col md:flex-row">
-      <div class="flex flex-col md:flex-row w-full">
-        <!-- Welcome Card -->
-        <div class="md:w-1/2 welcome-card hidden md:block" 
-             data-aos="fade-right" 
-             data-aos-duration="800">
-          <svg width="100%" height="100%" viewBox="0 0 800 800" style="position: absolute; top: 0; left: 0; z-index: 0;">
-            <defs>
+  <div class="justify-center px-4 py-8">
+    <div class="max-w-7xl mx-auto min-h-[calc(100vh-150px)] flex items-stretch">
+      <!-- Combined Card Container -->
+      <div class="bg-neutral-900/70 backdrop-blur-md shadow-inset-white rounded-2xl overflow-hidden flex-1 flex flex-col md:flex-row">
+        <div class="flex flex-col md:flex-row w-full">
+          <!-- Welcome Card -->
+          <div class="md:w-1/2 welcome-card hidden md:block"
+               data-aos="fade-right"
+               data-aos-duration="800">
+            <svg width="100%"
+                 height="100%"
+                 viewBox="0 0 800 800"
+                 style="position: absolute;
+                        top: 0;
+                        left: 0;
+                        z-index: 0">
+              <defs>
               <filter id="bb-filter" x="-100%" y="-100%" width="400%" height="400%">
-                <feGaussianBlur stdDeviation="105" in="SourceGraphic" result="blur"></feGaussianBlur>
+              <feGaussianBlur stdDeviation="105" in="SourceGraphic" result="blur"></feGaussianBlur>
               </filter>
-            </defs>
-            <g filter="url(#bb-filter)">
+              </defs>
+              <g filter="url(#bb-filter)">
               <ellipse rx="277.5" ry="70.5" cx="374" cy="152" fill="#08b74f"></ellipse>
               <ellipse rx="277.5" ry="70.5" cx="609" cy="577" fill="#2e90fa"></ellipse>
-            </g>
-          </svg>
-          <div class="content">
-            <div class="logos">
-              <img src="{% static 'foss-bu-dark.png' %}" alt="FOSS BU" class="h-8 md:h-12 w-auto" width="auto" height="auto">
-              <img src="{% static 'logo.svg' %}" alt="Re-Dcrypt" class="h-8 md:h-12 w-auto" width="auto" height="auto">
-            </div>
-            <div class="welcome-text">
-              <h2>
-                <span class="block text-white/80">Let's</span>
-                <span class="block text-white/80">Log You</span>
-                <span class="block text-white/80">In</span>
-              </h2>
+              </g>
+            </svg>
+            <div class="content">
+              <div class="logos">
+                <img src="{% static 'foss-bu-dark.png' %}"
+                     alt="FOSS BU"
+                     class="h-8 md:h-12 w-auto"
+                     width="auto"
+                     height="auto">
+                <img src="{% static 'logo.svg' %}"
+                     alt="Re-Dcrypt"
+                     class="h-8 md:h-12 w-auto"
+                     width="auto"
+                     height="auto">
+              </div>
+              <div class="welcome-text">
+                <h2>
+                  <span class="block text-white/80">Let's</span>
+                  <span class="block text-white/80">Log You</span>
+                  <span class="block text-white/80">In</span>
+                </h2>
+              </div>
             </div>
           </div>
-        </div>
-
-        <!-- Mobile Welcome Card -->
-        <div class="md:hidden welcome-card" 
-             data-aos="fade-down" 
-             data-aos-duration="800">
-          <svg width="100%" height="100%" viewBox="0 0 800 800" style="position: absolute; top: 0; left: 0; z-index: 0;">
-            <defs>
+          <!-- Mobile Welcome Card -->
+          <div class="md:hidden welcome-card"
+               data-aos="fade-down"
+               data-aos-duration="800">
+            <svg width="100%"
+                 height="100%"
+                 viewBox="0 0 800 800"
+                 style="position: absolute;
+                        top: 0;
+                        left: 0;
+                        z-index: 0">
+              <defs>
               <filter id="bb-filter" x="-100%" y="-100%" width="400%" height="400%">
-                <feGaussianBlur stdDeviation="105" in="SourceGraphic" result="blur"></feGaussianBlur>
+              <feGaussianBlur stdDeviation="105" in="SourceGraphic" result="blur"></feGaussianBlur>
               </filter>
-            </defs>
-            <g filter="url(#bb-filter)">
+              </defs>
+              <g filter="url(#bb-filter)">
               <ellipse rx="277.5" ry="70.5" cx="374" cy="152" fill="#08b74f"></ellipse>
               <ellipse rx="277.5" ry="70.5" cx="609" cy="577" fill="#2e90fa"></ellipse>
-            </g>
-          </svg>
-          <div class="content">
-            <div class="logos">
-              <img src="{% static 'foss-bu-dark.png' %}" alt="FOSS BU" class="h-8 md:h-12 w-auto" width="auto" height="auto">
-              <img src="{% static 'logo.svg' %}" alt="Re-Dcrypt" class="h-8 md:h-12 w-auto" width="auto" height="auto">
-            </div>
-            <div class="welcome-text">
-              <h2>
-                <span class="block text-white/80">Let's</span>
-                <span class="block text-white/80">Log You</span>
-                <span class="block text-white/80">In</span>
-              </h2>
+              </g>
+            </svg>
+            <div class="content">
+              <div class="logos">
+                <img src="{% static 'foss-bu-dark.png' %}"
+                     alt="FOSS BU"
+                     class="h-8 md:h-12 w-auto"
+                     width="auto"
+                     height="auto">
+                <img src="{% static 'logo.svg' %}"
+                     alt="Re-Dcrypt"
+                     class="h-8 md:h-12 w-auto"
+                     width="auto"
+                     height="auto">
+              </div>
+              <div class="welcome-text">
+                <h2>
+                  <span class="block text-white/80">Let's</span>
+                  <span class="block text-white/80">Log You</span>
+                  <span class="block text-white/80">In</span>
+                </h2>
+              </div>
             </div>
           </div>
-        </div>
-
-        <!-- Form Section -->
-        <div class="md:w-2/3 flex-1" data-aos="fade-up" data-aos-duration="800">
-          <form class="h-full" id="login_form" method="post" action="{% url 'account_login' %}">
-            {% csrf_token %}
-            
-            <div class="form-container h-full">
-              <div class="form-content p-8">
-                <div class="step-header flex flex-col items-center mb-8">
-                  <span class="flex items-center justify-center w-12 h-12 rounded-full bg-green-600/20 text-green-500 mb-4">
-                    <span class="material-symbols-outlined text-3xl">login</span>
-                  </span>
-                  <div class="text-center">
-                    <h2 class="text-xl font-bold text-green-500">Welcome back!</h2>
-                    <p class="text-neutral-400 text-sm mt-2">
-                      Don't have an account? 
-                      <a href="{% url 'account_signup' %}" class="text-green-500 hover:underline">Sign up</a>
-                    </p>
-                  </div>
-                </div>
-
-                <div class="form-fields" data-aos="fade-up" data-aos-delay="200">
-                  <div class="form-field">
-                    <label for="id_login">Email or Username</label>
-                    <div class="relative">
-                      {{ form.login }}
+          <!-- Form Section -->
+          <div class="md:w-2/3 flex-1" data-aos="fade-up" data-aos-duration="800">
+            <form class="h-full"
+                  id="login_form"
+                  method="post"
+                  action="{% url 'account_login' %}">
+              {% csrf_token %}
+              <div class="form-container h-full">
+                <div class="form-content p-8">
+                  <div class="step-header flex flex-col items-center mb-8">
+                    <span class="flex items-center justify-center w-12 h-12 rounded-full bg-green-600/20 text-green-500 mb-4">
+                      <span class="material-symbols-outlined text-3xl">login</span>
+                    </span>
+                    <div class="text-center">
+                      <h2 class="text-xl font-bold text-green-500">Welcome back!</h2>
+                      <p class="text-neutral-400 text-sm mt-2">
+                        Don't have an account?
+                        <a href="{% url 'account_signup' %}"
+                           class="text-green-500 hover:underline">Sign up</a>
+                      </p>
                     </div>
                   </div>
-                  
-                  <div class="form-field">
-                    <label for="id_password">Password</label>
-                    <div class="relative">
-                      {{ form.password }}
-                      <span class="material-symbols-outlined cursor-pointer text-xl absolute top-3 right-3 text-neutral-400"
-                            id="togglePassword">visibility</span>
+                  <div class="form-fields" data-aos="fade-up" data-aos-delay="200">
+                    <div class="form-field">
+                      <label for="id_login">Email or Username</label>
+                      <div class="relative">{{ form.login }}</div>
+                    </div>
+                    <div class="form-field">
+                      <label for="id_password">Password</label>
+                      <div class="relative">
+                        {{ form.password }}
+                        <span class="material-symbols-outlined cursor-pointer text-xl absolute top-3 right-3 text-neutral-400"
+                              id="togglePassword">visibility</span>
+                      </div>
+                    </div>
+                    <div class="flex items-center justify-between mb-6">
+                      <label class="custom-checkbox">
+                        {{ form.remember }}
+                        <span class="text-neutral-400">Remember me</span>
+                      </label>
+                      <a href="{% url 'account_reset_password' %}"
+                         class="text-green-500 hover:underline text-sm">Forgot Password?</a>
                     </div>
                   </div>
-
-                  <div class="flex items-center justify-between mb-6">
-                    <label class="custom-checkbox">
-                      {{ form.remember }}
-                      <span class="text-neutral-400">Remember me</span>
-                    </label>
-                    <a href="{% url 'account_reset_password' %}" class="text-green-500 hover:underline text-sm">
-                      Forgot Password?
-                    </a>
-                  </div>
+                </div>
+                <div class="form-buttons" data-aos="fade-up" data-aos-delay="400">
+                  <button type="submit"
+                          class="w-full bg-neutral-900/70 shadow-inset-white hover:bg-green-600 text-neutral-100 hover:text-neutral-50 font-bold py-3 px-6 rounded-full transition-all duration-300">
+                    Login
+                  </button>
+                  <p class="text-neutral-400 text-xs mt-4 text-center">
+                    By logging in, you agree to Re-Dcrypt's
+                    <a href="/terms-and-conditions/" class="text-green-500 hover:underline">Terms of Service</a> and
+                    <a href="/privacy-policy/" class="text-green-500 hover:underline">Privacy Policy</a>
+                  </p>
                 </div>
               </div>
-
-              <div class="form-buttons" data-aos="fade-up" data-aos-delay="400">
-                <button type="submit" class="w-full bg-neutral-900/70 shadow-inset-white hover:bg-green-600 text-neutral-100 hover:text-neutral-50 font-bold py-3 px-6 rounded-full transition-all duration-300">
-                  Login
-                </button>
-                <p class="text-neutral-400 text-xs mt-4 text-center">
-                  By logging in, you agree to Re-Dcrypt's
-                  <a href="/terms-and-conditions/" class="text-green-500 hover:underline">Terms of Service</a> and
-                  <a href="/privacy-policy/" class="text-green-500 hover:underline">Privacy Policy</a>
-                </p>
-              </div>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-
-<script>
+  <script>
 document.addEventListener('DOMContentLoaded', function() {
   const form = document.getElementById('login_form');
   const togglePassword = document.getElementById('togglePassword');
@@ -440,5 +464,5 @@ document.addEventListener('DOMContentLoaded', function() {
     }
   });
 });
-</script>
+  </script>
 {% endblock content %}
