--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -1,6 +1,11 @@
-{% extends "base.html" %} {% load i18n %} {% load account %} {% block head_title
-%}Confirm Email{% endblock %} {% block style %}
-<style>
+{% extends "base.html" %}
+{% load i18n %}
+{% load account %}
+
+{% block head_title %}{% trans "Confirm Email" %}{% endblock head_title %}
+
+{% block style %}
+  <style>
   button#submit {
     border: 2px solid #08b74f;
     border-radius: 5px;
@@ -19,49 +24,31 @@
     color: black;
     border: 2px solid black;
   }
-</style>
-{% endblock %} {% block content %}
-<div
-  class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10 text-green-600"
-  style="background-color: rgba(0, 42, 42, 0.6)"
->
-  <h1
-    class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6"
-  >
-    {% trans "Confirm E-mail Address" %}
-  </h1>
-  <hr class="mt-3 mb-3 border-green-600" />
-  {% if confirmation %} {% user_display confirmation.email_address.user as
-  user_display %}
+  </style>
+{% endblock style %}
 
-  <p>
-    {% blocktrans with confirmation.email_address.email as email %}Please
-    confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail
-    address for user {{ user_display }}.{% endblocktrans %}
-  </p>
-
-  <form
-    method="post"
-    action="{% url 'account_confirm_email' confirmation.key %}"
-  >
-    {% csrf_token %}
-    <button
-      type="submit"
-      id="submit"
-      class="border border-green-600 focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700 text-sm font-semibold leading-none text-white focus:outline-none rounded hover:bg-nblue-500 hover:text-black py-4 w-full mt-5"
-    >
-      {% trans 'Confirm' %}
-    </button>
-  </form>
-
-  {% else %} {% url 'account_email' as email_url %}
-
-  <p>
-    {% blocktrans %}This e-mail confirmation link expired or is invalid. Please
-    <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{%
-    endblocktrans %}
-  </p>
-
-  {% endif %}
-</div>
-{% endblock %}
+{% block content %}
+  <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10 text-green-600" style="background-color: rgba(0, 42, 42, 0.6)">
+    <h1 class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
+      {% trans "Confirm E-mail Address" %}
+    </h1>
+    <hr class="mt-3 mb-3 border-green-600" />
+    {% if confirmation %}
+      {% user_display confirmation.email_address.user as user_display %}
+      <p>
+        {% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}
+      </p>
+      <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+        {% csrf_token %}
+        <button type="submit" id="submit" class="border border-green-600 focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700 text-sm font-semibold leading-none text-white focus:outline-none rounded hover:bg-nblue-500 hover:text-black py-4 w-full mt-5">
+          {% trans "Confirm" %}
+        </button>
+      </form>
+    {% else %}
+      {% url 'account_email' as email_url %}
+      <p>
+        {% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}
+      </p>
+    {% endif %}
+  </div>
+{% endblock content %}
